# ookami

./: .clang-format  .gitignore  CMakeLists.txt  README.md  appveyor.yml
cmake/: CI.CTestScript.cmake  CopyDllsForDebug.cmake  Warnings.cmake
injector/: CMakeLists.txt
injector/src/: main.cpp
ookami/: CMakeLists.txt
ookami/include/ookami/: constants.hpp  offsets.hpp
ookami/include/ookami/detours/: detour_manager.hpp  framescript.hpp
ookami/include/ookami/functions/: lua.hpp
ookami/include/ookami/memory/: detour.hpp  memory.hpp  memory_operation.hpp
ookami/include/ookami/objmgr/: objmgr.hpp
ookami/src/: dllmain.cpp
ookami/src/detours/: detour_manager.cpp  framescript.cpp
ookami/src/functions/: lua.cpp
ookami/src/objmgr/: objmgr.cpp
